data ingestion added

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -201,6 +201,93 @@
    "source": [
     "get_prodcit(x=4, y=\"3\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download data from gdrive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url =\"https://drive.google.com/file/d/1QkhFwEN6Nw-bzCOkd-PnmBUjZCNN9bDB/view?usp=sharing\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1QkhFwEN6Nw-bzCOkd-PnmBUjZCNN9bDB'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_id = url.split(\"/\")[-2]\n",
+    "file_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?export=download&id=1QkhFwEN6Nw-bzCOkd-PnmBUjZCNN9bDB\n",
+      "From (redirected): https://drive.google.com/uc?export=download&id=1QkhFwEN6Nw-bzCOkd-PnmBUjZCNN9bDB&confirm=t&uuid=b2393bf4-7184-4eac-aaea-fa143982c779\n",
+      "To: /Applications/ml-apps/Deep-Learning-Project/research/Chest-CT-Scan-data.zip\n",
+      "100%|██████████| 943M/943M [01:23<00:00, 11.3MB/s] \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Chest-CT-Scan-data.zip'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prefix = 'https://drive.google.com/uc?export=download&id='\n",
+    "gdown.download(prefix+file_id, \"Chest-CT-Scan-data.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
